# raghilda

./: .gitignore  AGENTS.md  README.md  doc.html  great-docs.yml  mkdocs.yml  pyproject.toml
.github/workflows/: check.yml  docs.yml  test.yml
docs/: .gitignore  _quarto.yml  objects.json  reference.md
examples/: attributes_filters.py  attributes_filters.qmd  chatlas_rag.py  github_issues_rag.py  metadata_filters.py  positron_github_rag.py
src/raghilda/: __init__.py  _attribute_filters.py  _attribute_schema.py  _attributes.py  _chroma_embedding.py  _chroma_store.py  _chunker.py  _deoverlap.py  _duckdb_store.py  _embedding.py  _metadata.py  _openai_store.py  _store.py  _store_metadata.py  _types.py  _utils.py  chunk.py  chunker.py  document.py  embedding.py  read.py  scrape.py  store.py  types.py
src/ragnar/: __init__.py  _chunker.py  _embedding.py  _openai_store.py  _store.py  chunker.py  document.py  embedding.py  read.py  scrape.py  store.py
tests/: conftest.py  helpers.py  test_api_contract.py  test_attributes_filter.py  test_attributes_schema.py  test_chonkie_compat.py  test_chroma_embedding_typing.py  test_chroma_store.py  test_chunker.py  test_document.py  test_embedding.py  test_embedding_cohere.py  test_integration_helpers.py  test_metadata_filter.py  test_metadata_schema.py  test_openai_store_attributes.py  test_openai_store_metadata.py  test_read.py  test_scrape.py  test_store.py  test_types.py
user_guide/: 00-getting-started.qmd  01-custom-embedding-providers.qmd  02-chunking.qmd  03-attribute-filters.qmd  03-metadata-filters.qmd  10-introduction.qmd  50-chromadb-store.qmd  51-chromadb-embedding-functions.qmd
