[project]
name = "ragnar"
version = "0.1.0"
description = "RAG made simple"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Daniel Falbel", email = "daniel@posit.co" }
]
requires-python = ">=3.11"
dependencies = [
    "chonkie>=1.2.1",
    "duckdb>=1.3.2",
    "openai>=1.104.2",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project.optional-dependencies]
docs = [
    "jupyter>=1.1.1",
    "quartodoc>=0.7",
]
test = [
    "pyright>=1.1.405",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
docs_build = "cd docs && quartodoc build && quarto render"
docs_preview = "task docs_build && cd docs && quarto preview"
docs = "task docs_preview"
tests = "pytest tests"
types_check = "pyright"
format = "ruff format src tests"
format_check = "task format -- --check"
lint_check = "ruff check"
lint = "task lint_check -- --fix"
check = "task format_check && task lint_check && task types_check && task tests"
