[project]
name = "ragnar"
version = "0.1.0"
description = "RAG made simple"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Daniel Falbel", email = "daniel@posit.co" }
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "chonkie>=1.3.1",
    "duckdb>=1.3.2",
    "openai>=1.104.2",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "commonmark>=0.9.1",
    "markitdown>=0.1.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project.optional-dependencies]
docs = [
    "jupyter>=1.1.1",
    "quartodoc>=0.7",
]
test = [
    "pyright>=1.1.405",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
docs_build = "cd docs && ../.venv/bin/quartodoc build && quarto render"
docs_preview = "cd docs && ../.venv/bin/quartodoc build && quarto render && quarto preview"
docs = "cd docs && ../.venv/bin/quartodoc build && quarto render && quarto preview"
tests = "./.venv/bin/pytest tests"
types_check = "./.venv/bin/pyright --pythonpath ./.venv/bin/python"
format = "./.venv/bin/ruff format src tests"
format_check = "./.venv/bin/ruff format --check src tests"
lint_check = "./.venv/bin/ruff check"
lint = "./.venv/bin/ruff check --fix"
check = "sh -c './.venv/bin/ruff format --check src tests && ./.venv/bin/ruff check && ./.venv/bin/pyright --pythonpath ./.venv/bin/python && ./.venv/bin/pytest tests'"
