[project]
name = "raghilda"
version = "0.1.0"
description = "RAG made simple"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Daniel Falbel", email = "daniel@posit.co" },
    { name = "Tomasz Kalinowski", email = "tomasz@posit.co" },
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "chonkie>=1.3.1",
    "duckdb>=1.3.2",
    "openai>=1.104.2",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "commonmark>=0.9.1",
    "markitdown>=0.1.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project.optional-dependencies]
docs = ["jupyter>=1.1.1", "quartodoc>=0.7"]
test = ["pyright>=1.1.405", "pytest>=8.4.1", "ruff>=0.12.11"]

[dependency-groups]
dev = ["dotenv>=0.9.9", "taskipy>=1.14.1"]

[tool.taskipy.tasks]
docs_build = { cmd = "../.venv/bin/quartodoc build && quarto render", cwd = "docs", help = "build docs" }
docs_preview = { cmd = "../.venv/bin/quartodoc build && quarto render && quarto preview", cwd = "docs", help = "build docs and launch preview" }
docs = { cmd = "../.venv/bin/quartodoc build && quarto render && quarto preview", cwd = "docs", help = "build docs and launch preview" }
tests = { cmd = "./.venv/bin/pytest tests", help = "run pytest suite" }
types_check = { cmd = "./.venv/bin/pyright --pythonpath ./.venv/bin/python", help = "run pyright" }
format = { cmd = "./.venv/bin/ruff format src tests", help = "format code" }
format_check = { cmd = "./.venv/bin/ruff format --check src tests", help = "format check" }
lint_check = { cmd = "./.venv/bin/ruff check", help = "ruff lint" }
lint = { cmd = "./.venv/bin/ruff check --fix", help = "ruff lint --fix" }
check = { cmd = "./.venv/bin/ruff format --check src tests && ./.venv/bin/ruff check && ./.venv/bin/pyright --pythonpath ./.venv/bin/python && ./.venv/bin/pytest tests", help = "format+lint+types+tests" }
